--- a/GaugeWebsite/public/index.html
+++ b/GaugeWebsite/public/index.html
@@ -90,13 +90,13 @@
                 </div>
                 <div class="col-lg-4 col-sm-6 text-center">
                     <h2>Funding by:</h2>
-                    <a href="#" class="portfolio-box">
+                    <a href="http://www.ckns.ca" target="_blank" class="portfolio-box">
                         <img src="img/CKNS.png" class="img-responsive" alt="">
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6 text-center">
                     <h2>Equipment by:</h2>
-                    <a href="#" class="portfolio-box">
+                    <a href="http://www.metocean.com" target="_blank" class="portfolio-box">
                         <img src="img/MetOcean.png" class="img-responsive" alt="">
                     </a>
                 </div>
@@ -140,7 +140,9 @@
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h2 class="section-heading">About the gauge</h2>
                     <hr class="light">
-                    <p class="text-faded">Details about the gauge here.</p>
+                    <p class="text-faded">CKNS and MetOcean are pleased to offer Nova Scotia paddlers real-time water levels of the beautiful Medway River.  The Medway River is a 75 km river in Queen’s County, with a medium-volume stretch of class II/III whitewater between Greenfield and Buggy Hole.  This section is home to popular play features such as Perfect Wave and Fisher’s Hole, and well-travelled rapids Bangs Falls, Bear Falls and Buggy Hole.  </p>
+                    <p class="text-faded">The river level is measured in real-time using a custom made gauge built for us by our friends at MetOcean.  The gauge uses satellite communication and ultrasonic technology to send data to the CKNS website conveniently available to you on your computer or smartphone.  </p>
+                    <p class="text-faded">The gauge was built by MetOcean engineer and local paddler Leigh Woltman. The gauge installation was aided by the generous volunteer efforts of local paddlers Karl Vollmer and Dave Dunne. In other words this is a community project that was completed by paddlers for paddlers, with generous help from CKNS and MetOcean!</p>
                 </div>
             </div>
         </div>
