ADD - .gitignore, ignore email.pass files in NodeImap ADD - Reading E-mail password from file (untested) in NodeImap CHANGE - data.json query, replace $exists: true with $gt: 0 to remove holes CHANGE - FIXME:: hardcoded path in public index, need to fix server side rewrite ADD - Added readme.md

--- a/GaugeWebsite/public/index.html
+++ b/GaugeWebsite/public/index.html
@@ -256,7 +256,7 @@ $(function () {
     
     chart.showLoading("Loading data ...");
 
-    var jqxhr = $.getJSON( "data/data.json", function( data ) {
+    var jqxhr = $.getJSON( "http://whitewaterns.ca/gaugedata/data.json", function( data ) {
          chart.series[0].setData(data);
          chart.hideLoading(); 
         }).done(function() {
